# RecursiveNamespaceV2

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  cliff.toml  pyproject.toml  requirements.txt  setup.py
.agents/plan/: PDCA.md  promotions.md
.agents/plan/cycles/: Round_01.md  Round_02.md  Round_03.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  type-check.yml
RecursiveNamespace/: __init__.py  main.py
benchmarks/: bench_chain_keys.py
code/: recursive_namespace.py
docs/: conf.py  getting_started.rst  index.rst
docs/api/: recursivenamespace.rst  utils.rst
docs/guides/: array-indexing.rst  chain-keys.rst  method-proxy.rst
docs/plan/: PDCA.md  Round_1.md  Round_3.md  Summary.md
examples/: README.md  basic_usage.py  basic_usage_2.py  click_package.py  keys_vs_attributes.py  nested_namespace.py
examples/advanced/: 09_decorator_usage.py  10_schema_conversion.py  11_flatten_reconstruct.py  12_custom_iter_types.py  13_method_proxy.py
examples/basic/: 01_basic_usage.py  02_basic_operations.py
examples/real_world/: 13_click_integration.py  14_api_responses.py  15_ml_experiments.py
src/RecursiveNamespace/: main.py
src/recursivenamespace/: __init__.py  _version.py  errors.py  main.py  utils.py
tests/: test_context_managers.py  test_core_coverage.py  test_recursive_namespace.py  test_rns_v2.py  test_serialization.py  test_utils.py
tests/fixtures/: sample_config.json  sample_config.toml
