[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = 'RecursiveNamespaceV2'
dynamic = ['version']
description = 'Recursive Namespace. An extension of SimpleNamespace. Enhance get/set and parse from JSON'
readme = 'README.md'
authors = [{ name = 'VienPQ', email = 'pasxd245@gmail.com' }]
license = { file = 'LICENSE' }
requires-python = '>=3.8'
dependencies = []
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

[project.urls]
homepage = 'https://github.com/pasxd245/RecursiveNamespaceV2'
repository = 'https://github.com/pasxd245/RecursiveNamespaceV2'

[project.optional-dependencies]
dev = ['pre-commit>=3.0']
test = ['pytest>=6.0', 'coverage>=7.0']
docs = ['sphinx>=7.0', 'sphinx-rtd-theme>=2.0']

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
include = ["src/recursivenamespace"]

[tool.hatch.build.targets.wheel]
packages = ["src/recursivenamespace"]

[tool.ruff]
line-length = 80
target-version = "py310"
fix = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --strict-config --capture=no --durations=30 --junitxml=out/test-data.xml"
testpaths = ["tests"]
junit_family = "xunit2"

[tool.coverage.run]
branch = true

[tool.coverage.report]
ignore_errors = false
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:s
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "AbstractMethodError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.codespell]
ignore-words-list = "rns"
ignore-regex = 'https://([\w/\.])+'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_equality = true
strict = true
